# code

./: .gitignore  CMakeLists.txt
3d-viewing-pinhole-camera/: CMakeLists.txt  pinhole.cpp
computing-pixel-coordinates-of-3d-point/: CMakeLists.txt
introduction-to-ray-tracing/: CMakeLists.txt  raytracer.cpp
rasterization-2d/: CMakeLists.txt  raster2d.cpp
rasterization-perspective-correct/: CMakeLists.txt  raster-correct.cpp
rasterization-practical-implementation/: CMakeLists.txt  geometry.h  raster3d.cpp
